--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "earthshine",
+	"name": "edsonjaramillo.earthshine",
 	"displayName": "Earthshine",
 	"version": "1.0.0",
 	"description": "The glow caused by sunlight reflected off the earth, especially on the darker portion of a crescent moon.",
